# clinical-agent

./: .env.example  README.md  docker-compose.yml
api/: pyproject.toml
api/app/: server.py
ui/: main.py
